--- a/src/views/login.html
+++ b/src/views/login.html
@@ -2,8 +2,13 @@
 
 <h2>Olá, {{ name }}, {{ age }}</h2>
 
+{{ messages.errorLogged }}
+{{ messages.teste }}
+
 <form action="/login" method="post">
     <input type="text" name="email">
+    {{ messages.email }}
     <input type="password" name="password">
-    <button type="submit">Store</button>
+    {{ messages.password }}
+    <button type="submit">Login</button>
 </form>
